# btp-genai-orchestration-demo

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/runbooks/: account-lockout.md  backup-restore.md  printer-queue.md  tablet-reset.md  vpn-access.md
docs/screenshots/: .gitkeep  README.md
src/btp_genai_orchestration/: __init__.py  api.py  backend.py  cli.py  config.py  factory.py  live_backend.py  mock_backend.py  models.py  pipeline.py  prompts.py  retriever.py  store.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_factory.py  test_live.py  test_live_contract.py  test_mock_backend.py  test_models.py  test_pipeline.py  test_prompts.py  test_retriever.py  test_store.py
tools/capture/: README.md  capture  capture.py  requirements.txt  setup.sh  targets.yaml
