[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btp-genai-orchestration-demo"
version = "0.1.0"
description = "RAG/grounding demo on SAP BTP Generative AI Hub orchestration — the SOUVERÄN-KI pattern re-implemented on SAP."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Haydar Kozat" }]
keywords = ["sap", "btp", "generative-ai-hub", "rag", "orchestration", "grounding", "ai-core"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12,<1.0",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
# The official SAP SDK is only needed for LIVE mode. MOCK mode (the default) runs
# with zero credentials and zero network, so the base install stays dependency-light.
live = ["sap-ai-sdk-gen>=6.10,<7.0"]
api = ["fastapi>=0.110,<1.0", "uvicorn>=0.29,<1.0"]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<1.0",
    "httpx>=0.27,<1.0",
]

[project.scripts]
demo = "btp_genai_orchestration.cli:main"

[project.urls]
Homepage = "https://github.com/haydarkozat/btp-genai-orchestration-demo"
"Reference implementation (SOUVERÄN-KI)" = "https://github.com/haydarkozat/souveraen-ki"

[tool.hatch.build.targets.wheel]
packages = ["src/btp_genai_orchestration"]

[tool.hatch.build.targets.sdist]
include = ["src", "data", "tests", "README.md", "LICENSE", "CHANGELOG.md"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W", "N", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
# Typer's command/callback decorators are untyped; allow them under strict mode.
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# The SAP SDK does not ship type stubs.
module = "gen_ai_hub.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "live: hits the real GenAI Hub orchestration service (skipped without credentials)",
]

[tool.coverage.run]
branch = true
source = ["btp_genai_orchestration"]
omit = ["src/btp_genai_orchestration/live_backend.py", "src/btp_genai_orchestration/api.py"]

[tool.coverage.report]
show_missing = true
# Core-logic coverage target. live_backend / api are excluded above: the former
# only runs with real credentials, the latter is a thin optional adapter.
fail_under = 80
